Added Documentation for the Menus

--- a/Data/Content/LEIA ME (1727054755).md
+++ b/Data/Content/LEIA ME (1727054755).md
@@ -1,5 +1,5 @@
 # Projeto de Demonstração da Cave
-Sema bem-vindo(a) ao Projeto de Demonstração dos principais recursos da Cave Engine.
+Seja bem-vindo(a) ao Projeto de Demonstração dos principais recursos da Cave Engine.
 
 Aqui você vai encontrar mecânicas, sistemas, usos e aplicações variados para você aprender e aplicar em seus jogos. Cada projeto aqui não tem o objetivo de ser "um jogo completo" e nem mesmo "um jogo interessante", mas sim demonstrar os elementos citados por eles.
 
