Added English Documentation (READ MEs)

--- a/Source/Content/Demos/LEIA ME (1726985198).md
+++ b/Source/Content/Demos/LEIA ME (1726985198).md
@@ -1,2 +1,4 @@
 # Cenas de Demonstração
 Aqui você vai encontrar várias cenas diferentes, com propostas distintas para demonstrar funcionalidades da cave. Você pode explora-las individualmente para analisar como tudo foi feito.
+
+Você encontrará exemplos jogáveis principalmente nas demos de **First Person**, **Third Person** e **Vehicle**. As demais terão várias demonstrações de funcionalidades do motor para você estudar e explorar.
